# serial-linkedin-killer

./: .gitignore  CLAUDE.md  Dockerfile.agent  Dockerfile.mcp-server  LICENSE  README.md  alembic.ini  docker-compose.yml  job_applier.py  pyproject.toml
.zed/: debug.json
alembic/: env.py
alembic/versions/: 20250204_0001_001_add_company_to_messages_sent.py
cli/: client.py  ui.py
config/: agent.yaml
data/: cv_data.json
docs/: TODOs.md
docs/diagrams/: outreach_phase1_search.puml  outreach_phase2_send.puml  outreach_workflow_full.puml
linkedin_mcp/linkedin/agents/: easy_apply_agent.py
linkedin_mcp/linkedin/graphs/: linkedin_auth_graph.py
linkedin_mcp/linkedin/services/: browser_manager_service.py  job_application_service.py
scripts/: cli.py  start_agent.sh  start_agent_api.sh  start_linkedin_mcp.sh
src/: __init__.py  main.py
src/cli/: __init__.py  client.py  config.py  ui.py
src/config/: config_loader.py  trace_context.py
src/core/: __init__.py  agent.py
src/core/agents/: outreach_agent.py
src/core/api/: app.py
src/core/db/: __init__.py  agent_db.py  engine.py  models.py
src/core/kafka/: __init__.py  consumer.py  producer.py
src/core/model/: cv_analysis.py  job_application_agent_state.py  outreach_state.py
src/core/observability/: langfuse_config.py
src/core/providers/: linkedin_mcp_client.py  linkedin_mcp_client_sync.py  (+1 more)
src/linkedin_mcp/: __init__.py  linkedin_server.py
tests/: debug_send_message.py  test_cv_json_integration.py  test_job_application.py  test_message_send_graph.py  test_outreach.py  test_search_jobs.py
(+89 files in other folders)
